<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_task">My Task</string>
    <string name="add_task">Add Task</string>
    <string name="do_something">Do Something</string>
    <string name="task_title">%1$s</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="task_description">Task Description</string>
    <string name="settings">Settings</string>
    <string name="my_tasks">My Tasks</string>
    <string name="do_taxes">Do Taxes</string>
    <string name="groceries">Groceries</string>
    <string name="dog_food">Dog Food</string>
    <string name="username_username">Username: %1$s</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget lacinia dolor,
        laoreet finibus leo. Nullam in eros leo. Proin efficitur tristique consequat. Morbi ultricies est nulla,
        non vehicula tortor laoreet vitae. Ut pharetra eget lectus ut tempor. Aenean sollicitudin lectus vel
        diam venenatis tempus. Vivamus sed vehicula mauris, non gravida arcu.</string>
    <string name="task_body">%1$s</string>
    <string name="task_state">%1$s</string>
    <string name="notes">Notes: </string>
    <string name="state">State: </string>
    <string name="submitted">Submitted!</string>
    <string name="task_title_label">Task Title</string>
    <string name="team_setting">Team</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
    <string name="verification">Verification Code</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="verify">Verify</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete">Delete</string>
    <string name="add_img">Add Img</string>
    <string name="delete_img">Delete Img</string>
    <string name="task_image">Task Image</string>
    <string name="reader">Reader</string>
    <string name="ad">Ad</string>
</resources>