...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context=".activity.TaskDetailActivity">

    <TextView
        android:id="@+id/titleTaskDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/task_title"
        android:textSize="34sp"
...
