...
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
...
